Flytter externalHosts ut i template

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -15,9 +15,9 @@ spec:
   accessPolicy:
     outbound:
       external:
-        - host: api-gw-q1.oera.no
-        - host: oauth2.googleapis.com
-        - host: login.microsoftonline.com
+        {{#each externalHosts as |host|}}
+        - host: {{host}}
+        {{/each}}
   liveness:
     path: isalive
     initialDelay: 20
