--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -14,6 +14,8 @@ spec:
   port: 8080
   accessPolicy:
     outbound:
+      rules:
+        - application: omsorgspenger-midlertidig-alene-api-redis
       external:
         {{#each externalHosts as |host|}}
         - host: {{host}}
