--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -30,16 +30,23 @@ nav {
             discovery_endpoint = ""
             discovery_endpoint = ${?AZURE_APP_WELL_KNOWN_URL}
         }]
+        issuers = [{
+           alias = "login-service-v1"
+           discovery_endpoint = ""
+           discovery_endpoint = ${?LOGIN_SERVICE_V1_DISCOVERY_ENDPOINT}
+       },{
+           alias = "login-service-v2"
+           discovery_endpoint = ""
+           discovery_endpoint = ${?LOGINSERVICE_IDPORTEN_DISCOVERY_URL}
+           audience = ""
+           audience = ${?LOGINSERVICE_IDPORTEN_AUDIENCE}
+       }]
     }
     authorization {
         api_gateway {
             api_key = ""
             api_key = ${?APIGW_APIKEY}
         }
-        jwks_uri = ""
-        jwks_uri = ${?JWKS_URI}
-        issuer = ""
-        issuer = ${?ISSUER}
         cookie_name = ""
         cookie_name = ${?COOKIE_NAME}
     }
