Plukker opp redis evn fra secret

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -53,6 +53,7 @@ spec:
   envFrom:
     - secret: omsorgspenger-midlertidig-alene-api.apigw-apikey
     - secret: omsorgspenger-midlertidig-alene-api.sts-credentials
+    - secret: omsorgspenger-midlertidig-alene-api.storage-redis
     - configmap: loginservice-idporten
   env:
   {{#each env}}
