--- a/.github/workflows/apply-alerts.yml
+++ b/.github/workflows/apply-alerts.yml
@@ -25,15 +25,15 @@ jobs:
           RESOURCE: nais/alerterator.yml
           VARS: nais/dev-gcp.json
 
-#  deploy-prod-gcp:
-#    name: Deploy to prod-gcp
-#    if: startsWith(github.ref, 'refs/heads/master')  # If the branch is master
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v1
-#      - uses: nais/deploy/actions/deploy@v1
-#        env:
-#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-#          CLUSTER: prod-gcp
-#          RESOURCE: nais/alerterator.yml
-#          VARS: nais/prod-gcp.json
+  deploy-prod-gcp:
+    name: Deploy to prod-gcp
+    if: startsWith(github.ref, 'refs/heads/master')  # If the branch is master
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: nais/alerterator.yml
+          VARS: nais/prod-gcp.json
