Legger til oppslag av barn og tester

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -73,4 +73,12 @@ nav {
         password = ""
         password = ${?NAV_TRUSTSTORE_PASSWORD}
     }
+    cache{
+        barn{
+            expiry_in_minutes = "30"
+            expiry_in_minutes = ${?CACHE_EXPIRY_IN_MINUTES}
+            max_size = "500"
+            max_size = ${?CACHE_MAX_SIZE}
+        }
+    }
 }
