Slettr all referanse til apigw apikey.
- Oppretter egen secret i gcp for redis passphrase og sts-username og sts-password.

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -51,9 +51,7 @@ spec:
   vault:
     enabled: false
   envFrom:
-    - secret: omsorgspenger-midlertidig-alene-api.apigw-apikey
-    - secret: omsorgspenger-midlertidig-alene-api.sts-credentials
-    - secret: omsorgspenger-midlertidig-alene-api.storage-redis
+    - secret: {{app}}
     - configmap: loginservice-idporten
   env:
   {{#each env}}
