--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -57,11 +57,13 @@ nav {
     }
     kafka {
         bootstrap_servers = ""
-        bootstrap_servers = ${?KAFKA_BOOTSTRAP_SERVERS}
-        username = ""
-        username = ${?STS_USERNAME}
-        password = ""
-        password = ${?STS_PASSWORD}
+        bootstrap_servers = ${?KAFKA_BROKERS}
+        truststore_path = ""
+        truststore_path = ${?KAFKA_TRUSTSTORE_PATH}
+        credstore_password = ""
+        credstore_password = ${?KAFKA_CREDSTORE_PASSWORD}
+        keystore_path = ""
+        keystore_path = ${?KAFKA_KEYSTORE_PATH}
     }
     trust_store {
         path = ""
