Legger til tokenx som issuer. Alle kall videre blir vekset til tokenx uansett om det er tokenx eller loginservice som kommer inn. Utivder tester til å støtte tokenx og lager tester som bruker tokenx

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -7,11 +7,13 @@ metadata:
     team: {{team}}
 spec:
   image: {{ image }}
+  port: 8080
   azure:
     application:
       enabled: true
       tenant: {{ tenant }}
-  port: 8080
+  tokenx:
+    enabled: true
   accessPolicy:
     outbound:
       rules:
