--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,6 +29,11 @@ nav {
             certificate_hex_thumbprint = "Ikke i bruk. Hentes ut av AZURE_JWK"
             discovery_endpoint = ""
             discovery_endpoint = ${?AZURE_APP_WELL_KNOWN_URL}
+        },{
+             alias = "tokenx"
+             client_id = ${?TOKEN_X_CLIENT_ID}
+             private_key_jwk = ${?TOKEN_X_PRIVATE_JWK}
+             discovery_endpoint = ${?TOKEN_X_WELL_KNOWN_URL}
         }]
         issuers = [{
            alias = "login-service-v1"
@@ -40,7 +45,16 @@ nav {
            discovery_endpoint = ${?LOGINSERVICE_IDPORTEN_DISCOVERY_URL}
            audience = ""
            audience = ${?LOGINSERVICE_IDPORTEN_AUDIENCE}
+       },{
+          alias = "tokenx"
+          discovery_endpoint = ""
+          discovery_endpoint = ${?TOKEN_X_WELL_KNOWN_URL}
+          audience = ""
+          audience = ${?TOKEN_X_CLIENT_ID}
        }]
+       scopes = {
+           k9_selvbetjening_oppslag_tokenx_audience = ${?K9_SELVBETJENING_OPPSLAG_TOKENX_AUDIENCE}
+       }
     }
     authorization {
         cookie_name = ""
