Legger til frontend i accessPolicy slik at de kan veksle token mot api når de er klare for det.

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -15,6 +15,9 @@ spec:
   tokenx:
     enabled: true
   accessPolicy:
+    inbound:
+      rules:
+        - application: omsorgspenger-midlertidig-alene-dialog
     outbound:
       rules:
         - application: omsorgspenger-midlertidig-alene-api-redis
