Legger til tokenx som issuer (#106)
Legger til tokenx som issuer.
Alle kall videre blir vekset til tokenx uansett om det er tokenx eller loginservice som kommer inn.
Utivder tester til å støtte tokenx og lager tester som bruker tokenx
Legger til frontend i accessPolicy slik at de kan veksle token mot api når de er klare for det.

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -7,12 +7,17 @@ metadata:
     team: {{team}}
 spec:
   image: {{ image }}
+  port: 8080
   azure:
     application:
       enabled: true
       tenant: {{ tenant }}
-  port: 8080
+  tokenx:
+    enabled: true
   accessPolicy:
+    inbound:
+      rules:
+        - application: omsorgspenger-midlertidig-alene-dialog
     outbound:
       rules:
         - application: omsorgspenger-midlertidig-alene-api-redis
